--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
                             </ul>
                         </nav>
                 </header>
-                <div class="page-title">
+                <div class="wrapper">
                     <h2 class="page-title">News</h2>
                 </div><!--/.wrapper-->
         </div>
